<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notification_title"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/notification_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_image" />

        <ImageView
            android:id="@+id/from_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/from_image_accessibility"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/notification_date"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/notification_date"
            app:layout_constraintStart_toEndOf="@+id/notification_date_const"
            app:layout_constraintTop_toBottomOf="@+id/notification_title" />

        <TextView
            android:id="@+id/notification_time"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/notification_time"
            app:layout_constraintStart_toStartOf="@+id/notification_date"
            app:layout_constraintTop_toBottomOf="@+id/notification_date" />

        <TextView
            android:id="@+id/notification_time_const"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_date_const" />

        <TextView
            android:id="@+id/notification_to"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/notification_to"
            app:layout_constraintStart_toStartOf="@+id/notification_time"
            app:layout_constraintTop_toBottomOf="@+id/notification_time" />

        <TextView
            android:id="@+id/notification_from"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/notification_from"
            app:layout_constraintStart_toStartOf="@+id/notification_to"
            app:layout_constraintTop_toBottomOf="@+id/notification_to" />

        <TextView
            android:id="@+id/notification_date_const"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_title" />

        <TextView
            android:id="@+id/notification_to_const"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_time_const" />

        <TextView
            android:id="@+id/notification_from_const"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_to_const" />

        <TextView
            android:id="@+id/notification_full_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/notification_full_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_from" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>