<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_incoming"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/white"
        android:paddingBottom="4dp"
        app:layout_constraintDimensionRatio="13:6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_incoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/white"
            android:paddingBottom="5dp"
            android:text="@string/incoming_button"
            android:textColor="@android:color/background_dark"
            android:textStyle="normal|bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_outgoing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"

        android:paddingBottom="4dp"
        app:layout_constraintStart_toEndOf="@+id/layout_incoming"
        app:layout_constraintEnd_toStartOf="@id/layout_friends"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/button_outgoing"
            android:text="@string/outgoing_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:background="@android:color/white"
            android:textStyle="normal|bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        app:layout_constraintDimensionRatio="13:7"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/button_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/friends_button"
            android:textColor="@android:color/background_dark"
            android:textStyle="normal|bold" />
    </RelativeLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingBottom="100dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_outgoing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">
    </FrameLayout>

</android.support.constraint.ConstraintLayout>